--- a/captioning.ipynb
+++ b/captioning.ipynb
@@ -43,8 +43,8 @@
     "        self.root = root # 이미지가 존재하는 경로\n",
     "        with open(captions, \"r\", encoding='euc-kr') as f:\n",
     "             lines = f.readlines()\n",
-    "             self.captions = [] # 캡션(caption) 정보를 담을 리스트\n",
-    "             for line in lines: # 첫 번째 줄부터 바로 캡션 정보 존재\n",
+    "             self.captions = [] \n",
+    "             for line in lines: \n",
     "                index = line.find(\",\") # 캡션(caption) 문자열의 시작점 찾기\n",
     "                path = line[:index] # 이미지 파일 이름\n",
     "                caption = line[index + 1:] # 캡션(caption) 문자열 기록\n",
@@ -228,7 +228,6 @@
     "batch_size = 512\n",
     "num_workers = 0\n",
     "\n",
-    "# 데이터 로더(data loader) 선언\n",
     "train_data_loader = get_loader(train_image_dir, train_caption_path, vocab, train_transform, batch_size, shuffle=True, num_workers=num_workers, testing=False)\n",
     "val_data_loader = get_loader(val_image_dir, val_caption_path, vocab, val_transform, batch_size, shuffle=False, num_workers=num_workers, testing=False)"
    ]
@@ -239,7 +238,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 모델 하이퍼 파라미터 설정\n",
     "embed_size = 256 # 임베딩(embedding) 차원\n",
     "hidden_size = 512 # LSTM hidden states 차원\n",
     "num_layers = 1 # LSTM의 레이어 개수\n",
@@ -269,13 +267,11 @@
     "import numpy as np\n",
     "from early_stopping import EarlyStopping\n",
     "\n",
-    "start_time = time.time() # 전체 학습 시간 측정\n",
+    "start_time = time.time() \n",
     "early_stopping_encoder = EarlyStopping(patience=5, verbose=True, path='./caption_model/ckeckpoint_encoder.pt')\n",
     "early_stopping_decoder = EarlyStopping(patience=5, verbose=True, path='./caption_model/ckeckpoint_decoder.pt')\n",
     "\n",
-    "# 모델 학습 진행\n",
     "for epoch in range(num_epochs):\n",
-    "    # 먼저 학습 진행하기\n",
     "    print(\"[ Training ]\")\n",
     "    total_loss = 0\n",
     "    total_count = 0\n",
@@ -310,7 +306,6 @@
     "    # print(f\"Model saved: {os.path.join(model_path, f'decoder-{epoch + 1}.ckpt')}\")\n",
     "    # print(f\"Model saved: {os.path.join(model_path, f'encoder-{epoch + 1}.ckpt')}\")\n",
     "\n",
-    "    # 학습 이후에 평가 진행하기\n",
     "    print(\"[ Validation ]\")\n",
     "    total_loss = 0\n",
     "    total_count = 0\n",
@@ -413,7 +408,7 @@
     "sampled_ids = sampled_ids[0].cpu().numpy() # (1, max_seq_length) -> (max_seq_length)\n",
     "\n",
     "sampled_caption = []\n",
-    "for word_id in sampled_ids: # 하나씩 단어 인덱스를 확인하며\n",
+    "for word_id in sampled_ids: # 하나씩 단어 인덱스를 확인\n",
     "    word = vocab.idx2word[word_id] # 단어 문자열로 바꾸어 삽입\n",
     "    sampled_caption.append(word)\n",
     "    if word == '<end>':\n",
@@ -503,7 +498,7 @@
     "\n",
     "            # 정답 문장(answer sentences)\n",
     "            answer = []\n",
-    "            for word_id in captions[index]: # 하나씩 단어 인덱스를 확인하며\n",
+    "            for word_id in captions[index]: # 하나씩 단어 인덱스를 확인\n",
     "                word = vocab.idx2word[word_id.item()] # 단어 문자열로 바꾸어 삽입\n",
     "                answer.append(word)\n",
     "                if word == '<end>':\n",
