--- a/captioning.ipynb
+++ b/captioning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "class COCODataset(data.Dataset):\n",
     "    def __init__(self, root, captions, vocab, transform=None):\n",
     "        self.root = root # 이미지가 존재하는 경로\n",
-    "        with open(captions, \"r\", encoding='euc-kr') as f:\n",
+    "        with open(captions, \"r\", encoding='cp949') as f:\n",
     "             lines = f.readlines()\n",
     "             self.captions = [] \n",
     "             for line in lines: \n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,9 +179,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "torch.cuda.is_available()"
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +276,7 @@
    "source": [
     "import time\n",
     "import numpy as np\n",
-    "from early_stopping import EarlyStopping\n",
+    "from util.early_stopping import EarlyStopping\n",
     "\n",
     "start_time = time.time() \n",
     "early_stopping_encoder = EarlyStopping(patience=5, verbose=True, path='./caption_model/ckeckpoint_encoder.pt')\n",
@@ -347,96 +358,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "def load_image(image_path, transform=None):\n",
-    "    image = Image.open(image_path).convert('RGB')\n",
-    "    # image = Image.fromarray(cv2.imread(image_path))\n",
-    "    image = image.resize([224, 224], Image.LANCZOS)\n",
-    "    print(np.array(image).shape)\n",
-    "    plt.imshow(np.asarray(image))\n",
-    "    plt.show()\n",
-    "\n",
-    "    if transform is not None:\n",
-    "        image = transform(image).unsqueeze(0)\n",
-    "    \n",
-    "    return image\n",
-    "\n",
-    "image_path = r\"C:\\Users\\VIP444\\Documents\\Github\\ImageCaptioning\\data\\resize_test\\1004.jpg\"\n",
-    "encoder_path = \"models/older2/encoder-5.ckpt\" \n",
-    "decoder_path = \"models/older2/decoder-5.ckpt\" \n",
-    "vocab_path = \"data/vocab_26076.pkl\" \n",
-    "\n",
-    "embed_size = 256 # dimension of word embedding vectors\n",
-    "hidden_size = 512 # dimension of lstm hidden states\n",
-    "num_layers = 1 # number of layers in lstm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torchvision import transforms\n",
-    "import pickle\n",
-    "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(), \n",
-    "    transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
-    "\n",
-    "with open(vocab_path, 'rb') as f:\n",
-    "    vocab = pickle.load(f)\n",
-    "\n",
-    "encoder = EncoderCNN(embed_size).eval() # eval mode (batchnorm uses moving mean/variance)\n",
-    "decoder = DecoderRNN(embed_size, hidden_size, len(vocab), num_layers)\n",
-    "encoder = encoder.to(device)\n",
-    "decoder = decoder.to(device)\n",
-    "\n",
-    "encoder.load_state_dict(torch.load(encoder_path))\n",
-    "decoder.load_state_dict(torch.load(decoder_path))\n",
-    "\n",
-    "image = load_image(image_path, transform)\n",
-    "image_tensor = image.to(device)\n",
-    "\n",
-    "feature = encoder(image_tensor)\n",
-    "sampled_ids = decoder.sample(feature)\n",
-    "sampled_ids = sampled_ids[0].cpu().numpy() # (1, max_seq_length) -> (max_seq_length)\n",
-    "\n",
-    "sampled_caption = []\n",
-    "for word_id in sampled_ids: # 하나씩 단어 인덱스를 확인\n",
-    "    word = vocab.idx2word[word_id] # 단어 문자열로 바꾸어 삽입\n",
-    "    sampled_caption.append(word)\n",
-    "    if word == '<end>':\n",
-    "        break\n",
-    "sentence = ' '.join(sampled_caption)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "# 이미지 및 생성된 캡션(caption) 문장 출력\n",
-    "# plt.imshow(np.asarray(image))\n",
-    "# plt.show()\n",
-    "print(sentence)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from PIL import Image\n",
     "import numpy as np\n",
     "\n",
@@ -464,31 +385,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "encoder_path = \"caption_model/encoder-5.ckpt\" \n",
+    "decoder_path = \"caption_model/decoder-5.ckpt\" \n",
+    "vocab_path = \"caption_model/vocab_26076.pkl\" \n",
+    "\n",
+    "encoder = EncoderCNN(embed_size).eval() \n",
+    "decoder = DecoderRNN(embed_size, hidden_size, len(vocab), num_layers)\n",
+    "encoder = encoder.to(device)\n",
+    "decoder = decoder.to(device)\n",
+    "encoder.load_state_dict(torch.load(encoder_path, map_location=device))\n",
+    "decoder.load_state_dict(torch.load(decoder_path, map_location=device))\n",
+    "\n",
     "predictions = []\n",
     "answers = []\n",
     "answers_per_image = []\n",
     "\n",
-    "crop_size = 224\n",
-    "batch_size = 512\n",
-    "num_workers = 0\n",
-    "test_image_dir = r\"C:\\Users\\VIP444\\Documents\\COCO-Dataset\\test2014\"\n",
-    "test_caption_path = \"data/vocab_26076.pkl\"\n",
-    "\n",
-    "test_transform = transforms.Compose([ \n",
-    "    transforms.Resize(crop_size), \n",
-    "    transforms.ToTensor(), \n",
-    "    transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
-    "\n",
-    "test_data_loader = get_loader(test_image_dir, test_caption_path, vocab, test_transform, batch_size, shuffle=False, num_workers=num_workers, testing=True)\n",
-    "\n",
-    "total_step = len(test_data_loader)\n",
+    "total_step = len(val_data_loader)\n",
     "cnt = 0\n",
     "\n",
     "with torch.no_grad():\n",
-    "    for i, (images, captions, lengths) in enumerate(test_data_loader):\n",
+    "    for i, (images, captions, lengths) in enumerate(tqdm(val_data_loader)):\n",
     "        images = images.to(device)\n",
     "        captions = captions.to(device)\n",
-    "\n",
     "        # 순전파(forward) 진행\n",
     "        features = encoder(images)\n",
     "        sampled_ids_list = decoder.sample(features)\n",
@@ -519,8 +439,8 @@
     "                predictions.append(prediction[1:-1]) # 예측한 문장에 대해서는 1개만 삽입 (<sos>과 <eos>는 제외)\n",
     "            cnt += 1\n",
     "\n",
-    "        if i % log_step == 0:\n",
-    "            print(f\"[ Testing ] Batch size: {i}/{total_step}\")"
+    "        # if i % log_step == 0:\n",
+    "        #     print(f\"[ Testing ] Batch size: {i}/{total_step}\")"
    ]
   },
   {
